<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="#E0F7FA">

    <ImageView
        android:id="@+id/imageViewBaleia"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/whales"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecione"
        android:textSize="16sp"
        android:textColor="#005A9C"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <Spinner
        android:id="@+id/spinnerBaleias"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:entries="@array/especies_baleias"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnIrCuriosidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ir_curiosidades"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnIrGaleria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ir_galeria"/>

</LinearLayout>